Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22756

QML VideoPlayer can not use percent encoded urls containing %2f ( "/" symbol)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 4.7.4
    • None
    • N950 running Meego 1.2 Harmattan version 1.2011.34-2_PR_RM680.
      Also tested on N9.

      We are trying to fetch MP4 videos from a server.

      So something like:

      source: "http://server.com/test.mp4"

      To gain access to the video the request URL has to contain a bunch of parameters like:

      source: "http://server.com/test.mp4?parameter1=one&parameter2=two"

      One of the arguments for one of the parameters is the mime type (in this case its video/mp4).

      Because the slash ("/") is part of the standard url request language the server requires that it be percent encoded (to %2f) so instead of sending video/mp4 the server wants video%2fmp4.

      so our request looks something like:

      source: "http://server.com/test.mp4?MimeType=video%2fmp4"

      The problem is that the video player does its own percent encoding. So it sees the % in our url above and changes it to %25 (which is the percent encoding for the percent symbol (%) )and the server ends up getting:

      http://server.com/test.mp4?MimeType=video%252fmp4

      We thought maybe if we left it as a slash ("/") and let the video player do the percent encoding that would solve the problem but unfortunately it does not percent encode slashes.

      So as you can see there is no way to get the video player to send %2f in a URL.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mvogt Matthew Vogt (closed Nokia identity) (Inactive)
            nasrkargas Nasr Kargas
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes